Finish 1st half of index HTML

--- a/index.html
+++ b/index.html
@@ -8,8 +8,27 @@
   <title>Animated Website</title>
 </head>
 <body>
+  <h1 class="title">The Blog</h1>
+  <div class="imgbox">
+    <img src="./images/4.png" class="topimg">
+  </div>
+  <div class="textbox">
+    <p><span>Discover</span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci nostrum quod aliquam error eos aut quam exercitationem repellat nihil optio officiis, deserunt tempore molestias. Et expedita recusandae alias, fugit velit possimus assumenda ullam fuga numquam culpa ipsam, commodi magni, eum est labore mollitia illo. Sit tempora delectus veritatis perspiciatis vero impedit minus minima consequatur, facilis rerum voluptate natus non dolores accusamus architecto iste beatae repellat ut optio ullam eos? Earum at iusto harum accusamus? Dignissimos facilis eveniet eos sapiente veritatis corrupti! Optio corporis odio laboriosam possimus voluptates provident blanditiis quisquam perspiciatis, sed eius similique nobis illum eveniet nihil. Mollitia, dolore. Rerum non atque ut exercitationem accusantium ea id qui! Fuga architecto tempore quos debitis reiciendis cupiditate provident mollitia incidunt saepe quisquam quibusdam quam, ex unde temporibus fugiat earum officia accusantium recusandae, nulla dolores cum laboriosam. Aliquam veritatis corporis consectetur. Alias laudantium omnis, odio quo in veniam exercitationem dolorem! Autem deserunt, totam est temporibus ad magni ducimus fugit illum possimus officiis. Dolorem nihil rem tempora odio exercitationem similique maxime voluptatem voluptatibus iure quia! Perferendis, animi. Earum nesciunt et neque distinctio magni illum rem explicabo dicta quos tempora enim velit corporis totam sint itaque, delectus est, minima necessitatibus doloremque. Optio, repudiandae accusantium!</p>
+  </div>
+  <h1>The Gallery</h1>
+  <div class="collage">
+    <div class="photos">
+      <div class="image-box"><img src="./images/1.png"></div>
+      <div class="image-box"><img src="./images/2.png"></div>
+      <div class="image-box"><img src="./images/3.png"></div>
+      <div class="image-box"><img src="./images/4.png"></div>
+      <div class="image-box"><img src="./images/5.png"></div>
+      <div class="image-box"><img src="./images/6.png"></div>
+      <div class="image-box"><img src="./images/7.png"></div>
+      <div class="image-box"><img src="./images/8.png"></div>
+    </div>
+  </div>
   
-
   <script src="script.js"></script>
 </body>
 </html>
