--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/png" href="images/icon.png">
+  <link rel="stylesheet" href="style.css">
   <title>Animated Website</title>
 </head>
 <body>
@@ -34,14 +35,14 @@
   </div>
   <div class="textbox2">
     <p><span>Develope</span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ipsum libero aliquam impedit odit non iusto ducimus accusamus doloribus sapiente! Doloribus, modi tenetur quasi in maxime perferendis quisquam illum, consequatur quod fugiat corrupti! Mollitia illo eveniet facere laborum obcaecati ratione architecto atque porro optio nostrum! Nihil repellendus corrupti porro velit provident, veritatis magnam ipsam fuga quidem sit quasi molestias a vel, laudantium illum distinctio ducimus accusamus excepturi sed! Ad, quas vitae! Sint molestiae rerum impedit facere voluptates at expedita reprehenderit assumenda eaque optio distinctio a id vel commodi cumque asperiores, tempore rem earum nobis enim doloribus. Labore sint eius libero neque eveniet numquam, quaerat, sapiente voluptas optio ut assumenda alias obcaecati voluptatem, quam aspernatur magnam id animi. Qui, rerum iste voluptatibus quaerat, officia sequi provident itaque amet repudiandae quia laborum aut deleniti. Laudantium ad suscipit dolorem adipisci, consectetur, eius, ex nihil dolore cum ipsam unde nulla placeat molestias corrupti facere reiciendis mollitia sunt ea assumenda officiis est ab dicta exercitationem. Nostrum recusandae aspernatur dicta maxime, sapiente ipsam! Quos voluptate minima reprehenderit, ipsa pariatur sint quam praesentium sit consectetur magnam ea adipisci excepturi veniam. Tenetur modi accusamus quibusdam reprehenderit assumenda possimus minima placeat unde dolor? Eum eaque dolore molestias. Alias, aliquam.</p>
-    <a href="./page.html">Red More</a>
+    <a href="./page.html">Read More</a>
   </div>
   <h1>Social Media</h1>
   <i class="fa-brands fa-facebook-f"></i>
-  <i class="fa-brands fa-twitter-x"></i>
+  <i class="fa-brands fa-x-twitter"></i>
   <i class="fa-brands fa-instagram"></i>
   <i class="fa-brands fa-youtube"></i>
-  
+
   <script src="script.js"></script>
 </body>
 </html>
